--- a/Arca Web/src/pages/Perfil/style.css
+++ b/Arca Web/src/pages/Perfil/style.css
@@ -1,213 +1,178 @@
-ul{
-    list-style: none;
-}
-a{
-    text-decoration: none;
-}
-section{
-    width:100%;
-    height: 95vh;
-    position: relative;
+@charset "utf-8";
+.tittleentre {
+  margin-bottom: 0;
+  margin-top: 20px;
 }
 
-
-.logo{
-    font-family: RoadTest;
-    color: #0000;
-    font-size: 22px;
-
-}
-.active{
-    font-weight:bold;
-    color:rgb(221, 34, 59);
-}
-.text-container p:nth-child(1){
-    font-family: calibri;
-    font-weight:bold;
-    color: #000000;
-    font-size: 22px;
-}
-.text-container p:nth-child(2){
-    font-family: calibri;
-    font-weight: bold;
-    letter-spacing: 1px;
-    color: #111;
-    font-size: 60px;
-}
-.text-container p:nth-child(3){
-    font-family:Calibri;
-    color: #403040;
-    font-size: 30px;
-    line-height: 30px;
-}
-.text-container p{
-    line-height: 10px;
-    margin:45px 0px 25px;
-}
-.text-container{
-    position: absolute;
-    left:13%;
-    top:42%;
-    transform: translate(-13%,-42%);
-}
-.text-container button{
-    width: 130px;
-    height: 42px;
-    border-radius: 10px;
-    font-family: Calibri;
-    font-weight: bold;
-    font-size: 14px;
-    outline: none;
-    margin:0px  10px;
+.tittleentre h1 {
+  font-size: 50px;
+  color: darkred;
 }
 
-.about-container{
-    
-    width: 80%;
-    height: 300px;
-    background-color: darkred;
-    border-radius: 20px;
-    box-shadow: 2px 2px 12px rgba(0,0,0,0.2);
-    display: flex;
-    margin:-7px auto 30px auto;
-    position: center;
-    justify-content:space-evenly;
-    align-items: center;
-    
+td > .btn {
+  background-color: darkred;
+  color: #fff;
 }
 
-.about-container img{
-    height: 280px;
-    border-radius: 20px;
-}
-.about-text{
-    width: 550px;
-}
-.about-text p:nth-child(1){
-    color:bisque;
-    font-size: 30px;
-    line-height: 15px;
-}
-.about-text p:nth-child(2){
-    color:bisque;
-    font-size: 30px;
-    line-height: 15px;
-}
-.about-text p:nth-child(3){
-    color:bisque;  
-    font-size: 30px;
-    line-height: 15px;
-}
-.about-text p:nth-child(4){
-    color:bisque;    
-    font-size: 30px;
-    line-height: 15px;
-}
-.about-text p:nth-child(5){
-    color:bisque;
-    font-size: 30px;
-    line-height: 15px;
-}
-.about-text p:nth-child(6){
-    color:bisque;
-    font-size: 30px;
-    line-height: 15px;
+.list-groupentrepadre {
+  width: 90%;
+  margin: auto;
+  margin-top: 8%;
+  overflow: hidden;
 }
 
-.box-11, .box-22, .box-33 {
-    width: 300px;
-    height: 370px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    box-shadow: 2px 2px 12px rgba(0,0,0,0.3);
-    background-color: #fff;
-    border-radius: 15px;
-}
-.box-1,.box-2,.box-3{
-    background-color: darkred;
-    padding: 2px;
-    border-radius: 15px;
+.perfilcontent {
+  float: left;
+  left: 200px;
+  width: 30%;
+  /*background-color: rgb(0, 255, 76);*/
+  text-align: center;
 }
 
-.box-container{
-    display: flex;
-    justify-content: space-evenly;
+.entregacontent {
+  float: left;
+  left: 200px;
+  width: 70%;
 }
 
-
-.box-img-1{
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    padding-top: 40px;
+.contentre {
+  background-color: #fff;
+  margin-top: 0;
+  padding: 0;
+  margin: auto;
 }
 
-.box-img-1 img {
-    height: 180px;
-    width: 180px;
-}
-.box-img-2{
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    padding-top: 40px;
+.table {
+  text-align: center;
+  border-collapse: collapse;
 }
 
-.box-img-2 img {
-    height: 180px;
-    width: 180px;
-}
-.box-img-3{
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    padding-top: 40px;
+.encabetable {
+  font-size: 20px;
+  background-color: darkred;
+  color: wheat;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
-.box-img-3 img {
-    height: 180px;
-    width: 180px;
+.scrolltable1 {
+  height: 500px;
+  overflow-y: auto;
 }
 
-.box-img-1 p:nth-child(1){
-    color:rgb(0, 0, 0);
-    font-family:Calibri;
-    font-weight: bold;
-    font-size: 15px;
-    line-height: 1px;
+.about-cont img {
+  height: 230px;
+  border-radius: 20px;
+  text-align: center;
 }
-.box-img-1 p:nth-child(2){
-    font-family: calibri;
-    font-weight: bold;
-    letter-spacing: 1px;
-    color: #111;
-    font-size: 40px;
+
+.about-tex {
+  padding-top: 20px;
+  color: darkred;
+  font-size: 18px;
+  line-height: 15px;
+  font-style: normal;
+  padding-left: 10%;
+  padding-right: 10%;
 }
-.box-img-2 p:nth-child(1){
-    color:rgb(0, 0, 0);
-    font-family:Calibri;
-    font-weight: bold;
-    font-size: 15px;
-    line-height: 1px;
+
+.about-tex p {
+  text-align: left;
 }
-.box-img-2 p:nth-child(2){
-    font-family: calibri;
-    font-weight: bold;
-    letter-spacing: 1px;
-    color: #111;
-    font-size: 40px;
+
+.progress-element {
+  margin: auto;
+  text-align: left;
+  width: 75%;
 }
-.box-img-3 p:nth-child(1){
-    color:rgb(0, 0, 0);
-    font-family:Calibri;
-    font-weight: bold;
-    font-size: 15px;
-    line-height: 1px;
+
+progress {
+  opacity: 0;
 }
-.box-img-3 p:nth-child(2){
-    font-family: calibri;
-    font-weight: bold;
-    letter-spacing: 1px;
-    color: #111;
-    font-size: 40px;
+.progress-container-1 {
+  position: relative;
+  display: inline-block;
+  background: #eee;
+  height: 20px;
+  border-radius: 6px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.progress-container-1::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 75%;
+  background: darkred;
+}
+.progress-container-2 {
+  position: relative;
+  display: inline-block;
+  background: #eee;
+  height: 20px;
+  border-radius: 6px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.progress-container-2::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 25%;
+  background: darkred;
+}
+.progress-container-3 {
+  position: relative;
+  display: inline-block;
+  background: #eee;
+  height: 20px;
+  border-radius: 6px;
+  overflow: hidden;
+  width: 100%;
+}
+
+.progress-container-3::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 50%;
+  background: darkred;
+}
+
+.progress-label {
+  position: relative;
+}
+
+.progress-label::after {
+  content: "75%";
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.progress-label-2 {
+  position: relative;
+}
+.progress-label-2::after {
+  content: "25%";
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.progress-label-3 {
+  position: relative;
+}
+.progress-label-3::after {
+  content: "50%";
+  position: absolute;
+  top: 0;
+  right: 0;
 }
