--- a/Arca Web/src/pages/AboutUs/AboutUs.css
+++ b/Arca Web/src/pages/AboutUs/AboutUs.css
@@ -8,10 +8,12 @@
   }
 
 .container-twi {
+    position: fixed;
     width: 90%;
     top: 0%;   
     display: inline-block;
     align-content:center;
+    padding-bottom: 20%;
 }
 
 .divplane-twi {
@@ -21,7 +23,7 @@
     margin-left: 15%;
     background-color:darkred;
     display: inline-block;
-    margin-top: 10%;
+    margin-top: 8%;
     margin-bottom: 10%;
     padding-left: 3%;
     padding-right: 2%;
@@ -81,8 +83,9 @@
 
 
 .title-twi {
-    font-size: 250%;
+    font-size: 300%;
     padding-top: 5%;
+    font-weight: bold;
     text-align: center;
     color: bisque;
 }
