--- a/Arca Web/src/pages/Inicio/Inicio.css
+++ b/Arca Web/src/pages/Inicio/Inicio.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background: #F2EED5;
+  background: #f2eed5;
 }
 
 .container {
@@ -16,50 +16,48 @@ body {
 }
 
 .containerchild {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    margin-top: -5%;
-  }
-
-
- .divplane-inicio {
-    margin: auto;
-    width: 100%;
-    min-width: 230px;
-    max-width: 300px;
-    max-height: 100%;
-    min-height: 600px;
-    background-color:darkred;
-    border-collapse: collapse;
-    margin: auto;
-    padding-left: 2%;
-    padding-right: 1%;
-    border-radius: 10px 100px / 120px;
-    box-shadow: 10px 10px 15px grey;
+  width: 100%;
+  height: 85px;
+  display: flex;
+  flex-direction: row;
+  margin-top: -5%;
 }
-  
-  
+
+.divplane-inicio {
+  margin: auto;
+  width: 100%;
+  min-width: 230px;
+  max-width: 300px;
+  max-height: 100%;
+  min-height: 600px;
+  background-color: darkred;
+  border-collapse: collapse;
+  margin: auto;
+  padding-left: 2%;
+  padding-right: 1%;
+  border-radius: 10px 100px / 120px;
+  box-shadow: 10px 10px 15px grey;
+}
+
 .title-inicio {
   padding-top: 5%;
   text-align: center;
   font-size: 40px;
   color: bisque;
-
+  font-family: "Arial Rounded MT Bold";
 }
 
 .text-inicio {
   padding-top: 4%;
   padding-bottom: 6%;
-  font-size: 160%;
+  font-size: 140%;
   text-align: center;
   margin: 5%;
-  color:white;
+  color: white;
 }
 
 .img-inicio {
   text-align: center;
- 
 }
 
 .jpic-inicio {
@@ -69,5 +67,5 @@ body {
 }
 
 .jpic-inicio:hover {
-  filter:brightness(0.7);
+  filter: brightness(0.7);
 }
