--- a/Arca Web/src/components/EntregasSuper/EntregasSuper.css
+++ b/Arca Web/src/components/EntregasSuper/EntregasSuper.css
@@ -100,3 +100,11 @@
   background-color: var(--line-border-fill);
   color: #fff;
 }
+.avisos {
+  font-family: "Rockwell";
+  font-size: 70%;
+}
+.titulo {
+  font-size: 50px;
+  color: darkred;
+}
