--- a/Arca Web/src/pages/Perfil-Entregas/Perfil-Entregas.css
+++ b/Arca Web/src/pages/Perfil-Entregas/Perfil-Entregas.css
@@ -13,7 +13,6 @@
   font-family: letrapalpancho;
 }
 
-
 .tittleentre h1 {
   font-size: 50px;
   color: darkred;
@@ -23,8 +22,6 @@ td > .btn {
   background-color: darkred;
   color: #fff;
 }
-
-
 
 .list-groupentrepadre {
   text-align: center;
@@ -41,27 +38,24 @@ td > .btn {
   width: 30%;
   z-index: 3;
   text-align: center;
-  
 }
 
-
 .container-form-perfil {
-  
   padding-top: 3%;
   margin-right: 20%;
-  
 }
 
 .texto-foto-per {
   padding-top: 30%;
   color: darkred;
   font-size: 105%;
+  font-weight: 1000;
 }
 
 .texto-b-foto-per {
   font-weight: bold;
-  padding-top: .5%;
-  padding-bottom: .5%;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
 }
 
 .label-foto-per {
@@ -73,8 +67,8 @@ td > .btn {
 }
 
 .container-button-foto-per {
- padding-top: 2%;
- padding-bottom: 2%;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
 
 .button-foto-per {
@@ -114,8 +108,6 @@ td > .btn {
   border-radius: 20px;
   text-align: center;
   padding-right: 15%;
-  
-  
 }
 
 .about-tex {
@@ -134,7 +126,6 @@ td > .btn {
   text-align: left;
 }
 
-
 .entregas-perfil {
   z-index: 0;
   position: fixed;
@@ -147,8 +138,6 @@ td > .btn {
 
 .centrar-kpis {
   padding-left: 10%;
-  
-  
 }
 
 .progress-element {
@@ -247,13 +236,16 @@ progress {
   right: 0;
 }
 
-.botonCambiarImg{
+.botonCambiarImg {
   margin-top: 5%;
 }
 
-.img-Perfil-e{
+.img-Perfil-e {
   margin-top: 5%;
   max-width: 20%;
   min-width: 70%;
-  
+}
+.button-certi {
+  background-color: var(--line-border-fill);
+  color: #fff;
 }
