--- a/Arca Web/src/pages/Inicio/Inicio.css
+++ b/Arca Web/src/pages/Inicio/Inicio.css
@@ -44,7 +44,7 @@ body {
   text-align: center;
   font-size: 40px;
   color: bisque;
-  font-family: "Arial Rounded MT Bold";
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
 .text-inicio {
