--- a/Arca Web/src/pages Admin/PerfilAdmin/PerfilAdmin.css
+++ b/Arca Web/src/pages Admin/PerfilAdmin/PerfilAdmin.css
@@ -1,12 +1,27 @@
-.perfilcontentAdmin {
-  float: left;
-  width: 30%;
-  /*background-color: rgb(0, 255, 76);*/
-  text-align: center;
+@font-face {
+  font-family: letrapalpancho;
+  src: url("../../../gothamlight.otf");
 }
 
-.list-groupentrepadre {
-  padding-right: 5%;
+* {
+  font-family: letrapalpancho;
 }
+
+
+.container-general-peradmin {
+  padding-right: 5%;
+  margin-top: 8%;
+}
+
+.perfilcontent-admin {
+  float: left;
+  width: 30%;
+  text-align: center;
+
+}
+
+
+
+
 
 
