--- a/Arca Web/src/components/RevEntregas/RevEntregas.css
+++ b/Arca Web/src/components/RevEntregas/RevEntregas.css
@@ -1,44 +1,46 @@
 @font-face {
-    font-family: letrapalpancho;
-    src: url("../../../gothamlight.otf");
-  }
-  
+  font-family: letrapalpancho;
+  src: url("../../../gothamlight.otf");
+}
+
 * {
-    font-family: letrapalpancho;
+  font-family: letrapalpancho;
 }
 
 .button-reventregas {
-    border-radius: 7px;
-    
+  border-radius: 7px;
 }
 
 .title-formrev {
-    color: darkred;
-    font-weight: bold;
-    padding-top: 4%;
+  color: darkred;
+  font-weight: bold;
+  padding-top: 4%;
 }
 
 .text-formrev {
-    color: darkred;
+  color: darkred;
 }
 
 .container-comentrev {
-    padding-bottom: 3%;
+  padding-bottom: 3%;
 }
 
 .comentario-reventregas {
-    max-width: 90%;
-    padding-bottom: 1%;
+  max-width: 90%;
+  padding-bottom: 1%;
 }
 
 .container-button2 {
-    padding-top: 3%;
-    padding-bottom: 3%;
-
+  padding-top: 3%;
+  padding-bottom: 3%;
 }
 
 .button2-formrev {
-    border-radius: 10px;
-    background-color: darkred;
-    color: bisque;
+  border-radius: 10px;
+  background-color: darkred;
+  color: bisque;
+}
+.button-certi {
+  background-color: darkred;
+  color: #fff;
 }
