--- a/Arca Web/src/pages/Inicio/Inicio.css
+++ b/Arca Web/src/pages/Inicio/Inicio.css
@@ -44,7 +44,8 @@ body {
   text-align: center;
   font-size: 40px;
   color: bisque;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  font-weight: bold;
+  font-family: sans-serif;
 }
 
 .text-inicio {
