--- a/Arca Web/src/components/RevEntregas/RevEntregas.css
+++ b/Arca Web/src/components/RevEntregas/RevEntregas.css
@@ -44,3 +44,16 @@
   background-color: darkred;
   color: #fff;
 }
+.tituloentregas {
+  font-size: 30px;
+  padding-bottom: 1%;
+}
+
+.title-entre {
+  width: 100%;
+}
+.title-med-ent {
+  font-size: 25px;
+  padding-bottom: 1%;
+  font-weight: bold;
+}
