--- a/Arca Web/src/components/subirKPIs/SubirKPIS.css
+++ b/Arca Web/src/components/subirKPIs/SubirKPIS.css
@@ -26,7 +26,7 @@
   font-weight: bold;
   text-align: center;
   vertical-align: middle;
-  color: bisque;
+  color: #fff;
 }
 
 .esp-op-certi {
@@ -39,16 +39,13 @@
 
 .textform-op-certi {
   font-weight: bold;
-  font-size: 100%;
+  font-size: 90%;
   padding-top: 1.5%;
-  color: darkred;
+  color: rgb(0, 0, 0);
 }
 
 .textform-op-certi2 {
   font-weight: bold;
-  font-size: 115%;
-  padding-top: 1.5%;
-  color: darkred;
 }
 
 .inform-op-certi {
