--- a/Arca Web/src/pages/Perfil-Entregas/Perfil-Entregas.css
+++ b/Arca Web/src/pages/Perfil-Entregas/Perfil-Entregas.css
@@ -44,12 +44,16 @@ td > .btn {
   padding-top: 3%;
   margin-right: 20%;
 }
-
-.texto-foto-per {
-  padding-top: 30%;
-  color: darkred;
-  font-size: 105%;
-  font-weight: 1000;
+.negro {
+  font-size: 90%;
+  padding-top: 1.5%;
+  color: rgb(0, 0, 0);
+}
+.negrob {
+  font-weight: bold;
+  font-size: 90%;
+  padding-top: 1.5%;
+  color: rgb(0, 0, 0);
 }
 
 .texto-b-foto-per {
@@ -108,6 +112,7 @@ td > .btn {
   border-radius: 20px;
   text-align: center;
   padding-right: 15%;
+  margin-bottom: 70px;
 }
 
 .about-tex {
