--- a/Arca Web/src/pages/Inicio/Inicio.css
+++ b/Arca Web/src/pages/Inicio/Inicio.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background: #f2eed5;
+  background: #f7f7f7;
 }
 
 .container {
@@ -17,7 +17,6 @@ body {
 
 .containerchild {
   width: 100%;
-
   display: flex;
   flex-direction: row;
   margin-top: -5%;
@@ -29,13 +28,13 @@ body {
   min-width: 280px;
   max-width: 300px;
   max-height: 100%;
-  min-height: 650px;
+  min-height: 60px;
   background-color: darkred;
   border-collapse: collapse;
   margin: auto;
   padding-left: 2%;
   padding-right: 1%;
-  border-radius: 10px 100px / 120px;
+  border-radius: 10px 120px / 120px;
   box-shadow: 10px 10px 15px grey;
 }
 
@@ -54,7 +53,7 @@ body {
   font-size: 140%;
   text-align: center;
   margin: 5%;
-  color: white;
+  color: #f7f7f7;
 }
 
 .img-inicio {
